Documentação, adicionado 401 - não autorizado
